--- a/web/package.json
+++ b/web/package.json
@@ -29,8 +29,10 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.298.0",
     "react": "^18.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.8.0",
