--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
         run: npm ci
         working-directory: web
 
+      - name: Run frontend tests
+        run: npm run test
+        working-directory: web
+
       - name: Build frontend
         run: npm run build
         working-directory: web
