--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,6 +56,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          build-args: |
+             VERSION=${{ inputs.version }}
           platforms: ${{ matrix.platform }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
