--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "postbuild": "node ./scripts/sync-dist.mjs",
     "preview": "vite preview",
-    "lint": "tsc --noEmit",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "test": "vitest run"
   },
   "dependencies": {
@@ -52,8 +52,13 @@
     "@types/node": "^20.19.25",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.14",
