--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,13 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
+      # Playwright Cache
+      - name: Cache Playwright Binaries
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: playwright-${{ runner.os }}-${{ hashFiles('web/package-lock.json') }}
+
       # 2. Install Dependencies (Frontend & Playwright)
       - name: Install dependencies
         working-directory: web
@@ -39,9 +46,9 @@ jobs:
 
       # 3. Linting
       - name: Go Lint
-        uses: golangci/golangci-lint-action@v9
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v2.6
+          version: v1.60
 
       - name: Frontend Lint
         run: npm run lint
@@ -53,10 +60,7 @@ jobs:
         working-directory: web
 
       - name: Backend Unit Tests
-        run: |
-          export GOMODCACHE="$GITHUB_WORKSPACE/.gocache"
-          export GOCACHE="$GITHUB_WORKSPACE/.gocache/go"
-          go test ./...
+        run: go test ./...
 
       # 5. Build (Required for E2E)
       - name: Build Frontend
