fix: solve e2e issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,8 @@ jobs:
 
       # 6. E2E Tests
       - name: Start Full Stack
+        env:
+          ADMIN_SECRET: clusteruptime-e2e-magic-key
         run: |
           ./clusteruptime &
           echo "Waiting for server to start..."
